# hymeko_framework_rust

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CICD_SETUP_COMPLETE.md  CICD_STATUS.md  CITATION.cff  CI_CD_DOCUMENTATION.md  CI_CD_DOCUMENTATION_INDEX.md  CLAUDE.md  CODE_COVERAGE.md  COLD_START.md  CORE.YAML  COVERAGE_DEPLOYMENT_CHECKLIST.md  COVERAGE_DOCUMENTATION_INDEX.md  COVERAGE_ENHANCEMENTS.md  COVERAGE_INTEGRATION_COMPLETE.md  Cargo.toml  Core.yaml  DELIVERABLES.md  DEVELOPMENT.md  HSIKAN_FINAL_RESULTS_2026_05_03.md  HSIKAN_PERFORMANCE_REPORT_2026_05_03.md  HSIKAN_RESULTS_2026_05_04.md  HSIKAN_ROADMAP_2026_05_04.md  HSIKAN_STATE_2026_05_04.md  HYMEKO_COMPUTE_REPORT.md  MUJOCO_LOG.TXT  Makefile  PAPER_INTEGRATION_REPORT.md  PAPER_INTEGRATION_REPORT_R3.md  README.md  README.new.md  README_CICD.md  REORGANIZATION_COMPLETE.md  RESULTS_VIEWS_SUITE.md  SETUP_CHECKLIST.md  SIMD_LEXER_REORGANIZATION_COMPLETE.md  SIMD_LEXER_TESTS_FOLDER_NAMING_CORRECTED.md  SIMD_LEXER_TEST_SUMMARY.md  (+15 more)
hymeko_bench/: Cargo.toml
hymeko_bench/corpora/03_size_sweep/: index.json
hymeko_bench/paper_figs/: fig_circles_dig.py  make_figures.py  sim_mujoco_scenario.py
hymeko_bench/results/: artifact_generation.csv  binary_vs_hypergraph.csv  control_cycle.csv  control_cycle_td3_raw.csv  mujoco_scenario.csv  query_latency.csv  scaling.csv  scaling_pipeline.csv  scaling_pipeline_chain.csv  scaling_pipeline_highArity.csv  scaling_pipeline_humanoid.csv  scaling_pipeline_quadruped.csv  scaling_pipeline_tree.csv
hymeko_cli/: Cargo.toml
hymeko_cli/src/: main.rs  repl.rs
hymeko_compute/: Cargo.toml  README.md  build.rs
hymeko_compute/examples/: bench_kepaf.rs  layout_from_json.rs  spmv_from_json.rs
hymeko_compute/shaders/: force_directed.comp  signed_spmv.comp  vector_add.comp
hymeko_compute/src/: buffers.rs  context.rs  lib.rs
hymeko_compute/src/kernels/: force_directed.rs  mod.rs  signed_spmv.rs  vector_add.rs
hymeko_compute/tests/: test_context.rs
hymeko_core/: Cargo.toml  hash_performance_runs.csv  hash_performance_summary.csv
hymeko_core/benches/: interning_bench.rs  mod.rs
hymeko_core/data/robotics/: meta_kinematics.hymeko  robot_4wh.hymeko
hymeko_core/src/: common.rs  lib.rs  main.rs
hymeko_core/src/common/: ids.rs  ids_impl.rs  pathkey.rs
hymeko_core/src/engine/: hymeko_subscriber.rs  hypergraphengine.rs  hypergraphengine_impl.rs  mod.rs
hymeko_core/src/ir/: canonical_hash.rs  hash.rs  hash_pass.rs  ir.rs  lower.rs  meta.rs  mod.rs  time.rs
hymeko_core/src/module_store/: mod.rs  module_store.rs  module_view.rs  source_provider.rs
hymeko_core/src/query/: engine.rs  interpret.rs  (+6 more)
hymeko_core/tests/: mod.rs  test_helpers.rs
hymeko_daemon/: Cargo.toml
hymeko_daemon/src/: common.rs  config.rs  iox_ingress.rs  main.rs  service.rs  worker.rs
hymeko_emitter/: Cargo.toml
hymeko_emitter/src/: bridge.rs  editor_ir.rs  emit_hymeko.rs  emit_lean4.rs  emit_rust_stubs.rs  emit_sysml.rs  lib.rs
hymeko_emitter/tests/: test_bridge.rs  test_editor_ir.rs  test_emitters.rs
hymeko_formats/: Cargo.toml
hymeko_formats/src/: codegen.rs  gazebo.rs  lib.rs  sdf.rs  snapshot.rs  transforms.rs  urdf.rs  xml_util.rs
hymeko_hnn/: Cargo.toml
hymeko_hnn/src/: lib.rs
hymeko_hre/: Cargo.toml
hymeko_hre/src/: expansion.rs  lib.rs  visitor.rs
hymeko_hre/tests/: test_berge_traversal.rs  test_expansion.rs  test_fixture_berge.rs  test_fixture_expansion.rs  test_hypergraphengine.rs
hymeko_kit/: Cargo.toml
hymeko_kit/src/: lib.rs
hymeko_mcp/: Cargo.toml
hymeko_mcp/src/: lib.rs  main.rs  protocol.rs  server.rs  tools.rs
hymeko_mcp/tests/: test_mcp.rs
hymeko_monitor/: Cargo.toml  README.md  SPEC.md
hymeko_monitor/benches/: per_observation_latency.rs
hymeko_monitor/paper/: paper_outline.tex
hymeko_monitor/src/: incremental.rs  lib.rs  predicate.rs  robustness.rs  trace.rs  window.rs
hymeko_monitor/tests/: stl_kinematic.rs
hymeko_nagare/: Cargo.toml
hymeko_nagare/src/: lib.rs
hymeko_pgraph/: Cargo.toml
hymeko_pgraph/benches/: pgraph_bench.rs
hymeko_pgraph/data/: meta_pgraph.hymeko  prgraph_ex_3_1.hymeko
hymeko_pgraph/src/: abb.rs  axiom_extensions.rs  axioms.rs  builder.rs  cli.rs  dump.rs  lib.rs  lowering.rs  meta_resolve.rs  msg.rs  pgip_io.rs  regime.rs  schema.rs  ssg.rs  ssg_dm.rs
hymeko_pgraph/tests/: axiom_witness.rs  book_validation.rs  builder.rs  byproduct_filter_phase11.rs  cli.rs  gomb_dump_msg.rs  hypergraph_queries.rs  meta_resolve.rs  multi_objective.rs  pgip_io.rs  pgraph_e2e.rs  relaxed_msg.rs  ssg_decision_mapping.rs  topk_sanity.rs
hymeko_py/: Cargo.toml  README.md  pyproject.toml  smoke_test.py
hymeko_py/src/: cycles.rs  hymeko_parse.rs  incidence.rs  lib.rs  quadtree.rs
hymeko_query/: Cargo.toml
hymeko_query/src/: codegen.rs  engine.rs  entropy.rs  interpret.rs  lib.rs  predicate.rs  predicate_expr.rs  traits.rs  transform.rs
hymeko_query/tests/: bench_workflow.rs  mod.rs  test_anthropomorphic_generation.rs  test_const_resolve.rs  test_entropy.rs  test_gazebo_sim_launch.rs  test_gazebo_world.rs  test_generation_engine.rs  test_helpers.rs  test_imported_real.rs  test_mermaid.rs  test_prop_witnesses.rs  test_split.rs  test_sysml_emit.rs  test_template_driven.rs  test_torch_dataflow.rs  test_transform_ecosystem.rs
hymeko_ros2_demo/: README.md  package.xml  setup.cfg  setup.py
hymeko_ros2_demo/hymeko_ros2_demo/: __init__.py  grasping_context_node.py  topic_binding.py
hymeko_ros2_demo/launch/: grasping_context_only.launch.py  niitsuma_nodes_only.launch.py  ur5e_grasping_demo.launch.py
hymeko_ros2_demo/test/: test_dual_ir_extraction.py  test_topic_binding.py
hymeko_server/: Cargo.toml
hymeko_server/src/: lib.rs  main.rs
hymeko_server/tests/: test_api.rs
hymeko_wasm/: Cargo.toml
hymeko_wasm/src/: compile.rs  lib.rs  pgraph.rs  session.rs  wasm.rs
hymeko_wasm/tests/: test_compile.rs  test_pgraph.rs  test_session.rs
hymeko_wire/: Cargo.toml
hymeko_wire/src/: lib.rs
hymeko_wire/tests/: test_wire.rs
python/ehk_torch_stub/: pyproject.toml
signedkan_wip/signedkan_native/: Cargo.toml  pyproject.toml
(+2562 files in other folders)
