[package]
name = "hymeko"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "parser",
]
resolver = "2"

[workspace.dependencies]
blake3 = ">=1"
memmap2 = "0.9.10"
parser = { path = "parser" }
[lib]
name = "hymeko"
crate-type = ["rlib", "cdylib"]

[dependencies]
blake3 = { workspace = true }
parser = { workspace = true }
criterion = ">=0.8"
nalgebra = ">=0.34.1"
nalgebra-sparse = ">=0.11.0"
rayon = ">=1.11.0"
num-traits = ">=0.2.19"
pyo3 = ">=0.28.2"
numpy = ">=0.28.0"
[[bench]]
name = "parser_bench"
harness = false
[profile.bench]
opt-level = 3
debug = true       # Useful for profiling with tools like 'perf' or 'VTune'
lto = "thin"       # Link Time Optimization helps with the cross-module interning logic
codegen-units = 1  # Improves optimization quality for the lexer's hot loops