[package]
name = "hymeko"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["hymeko_core",
    "hymeko_daemon", "hymeko_py",
    "parser",
]
resolver = "2"

[workspace.dependencies]
blake3 = "1.8.3"
memmap2 = "0.9.10"
parser = { path = "parser" }
hymeko_core = { path = "hymeko_core" }
hymeko_py = { path = "hymeko_py" }




[dev-dependencies]
criterion = ">=0.8"
[dependencies]
parser = { workspace = true }
hymeko_core = { workspace = true }


[[bench]]
name = "parser_bench"
harness = false
[profile.bench]
opt-level = 3
debug = true       # Useful for profiling with tools like 'perf' or 'VTune'
lto = "thin"       # Link Time Optimization helps with the cross-module interning logic
codegen-units = 1  # Improves optimization quality for the lexer's hot loops
