

[workspace]
members = [
    "hymeko_client",
    "hymeko_core",
    "hymeko_daemon",
    "hymeko_py",
    "parser",
]
resolver = "2"

[workspace.dependencies]
blake3 = "1.8.3"
memmap2 = "0.9.10"
parser = { path = "parser" }
hymeko_core = { path = "hymeko_core" }
zenoh = "1.7.2"
serde_cbor = "0.11.2"
iceoryx2 = "0.8.1"
rayon = "1.11.0"
arrow = { version = "58.0.0" }
serde = "1.0.228"
log = "0.4.22"
ciborium = "0.2.2"
clap = "4.6.0"
[profile.bench]
opt-level = 3
debug = true       # Useful for profiling with tools like 'perf' or 'VTune'
lto = "thin"       # Link Time Optimization helps with the cross-module interning logic
codegen-units = 1  # Improves optimization quality for the lexer's hot loops
