[package]
name = "hymeko_bench"
version = "0.1.0"
edition = "2024"
description = "Scaling-study benchmark harness for the HyMeKo pipeline"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyberszittya/hymeko_framework_rust"

[[bin]]
name = "bench_scaling"
path = "src/bin/bench_scaling.rs"

[dependencies]
hymeko_core = { path = "../hymeko_core", default-features = false }
hymeko_query = { path = "../hymeko_query" }
hymeko_formats = { path = "../hymeko_formats" }
parser = { path = "../parser", default-features = false }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
