[package]
name = "hymeko_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
iceoryx2 = "0.8.1"
hymeko_core = { path = "../hymeko_core" }
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.5.60", features = ["derive"] }
moka = { version = "0.12.14", features = ["future"] }
rayon = "1.11.0"