[package]
name = "hymeko_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
iceoryx2 = "0.8.1"
hymeko_core = { path = "../hymeko_core" }
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.5.60", features = ["derive"] }
moka = { version = "0.12.14", features = ["future"] }
rayon = "1.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
oneshot = "0.2.1"
blake3 = "1.8.3"
zenoh = "1.7.2"
serde_cbor = "0.11.2"
dashmap = "7.0.0-rc2"
arrow = { version = "58.0.0", features = ["ipc"] }
