[package]
name = "hymeko_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
hymeko_core = { path = "../hymeko_core", features = ["ipc", "arrow-schema"] }
iceoryx2 = { workspace = true }
zenoh = { workspace = true }
serde_cbor = { workspace = true }
rayon = {workspace = true }
tokio = { version = "1.50.0", features = ["full"] }
clap = { workspace = true, features = ["derive"] }
moka = { version = "0.12.14", features = ["future"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
dashmap = "7.0.0-rc2"
arrow = { version = "58.0.0", features = ["ipc"] }
hex = "0.4.3"


