[package]
name = "hymeko_formats"
version = "0.1.0"
edition = "2024"
description = "Plugin crate providing the built-in HyMeKo format emitters (URDF, SDF, MJCF, DOT, Mermaid, Gazebo world)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyberszittya/hymeko_framework_rust"

[lib]
name = "hymeko_formats"

[dependencies]
hymeko_core = { path = "../hymeko_core", default-features = false }
hymeko_query = { path = "../hymeko_query" }
