[package]
name = "hymeko_mcp"
version = "0.1.0"
edition = "2024"
description = "Model Context Protocol (MCP) server exposing HyMeKo editor operations as tools"
license = "MIT OR Apache-2.0"

[[bin]]
name = "hymeko_mcp"
path = "src/main.rs"

[lib]
name = "hymeko_mcp"
path = "src/lib.rs"

[dependencies]
hymeko_emitter = { path = "../hymeko_emitter" }
hymeko_wasm = { path = "../hymeko_wasm" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["io-std", "io-util", "rt-multi-thread", "macros"] }
slotmap = { version = "1", features = ["serde"] }
