[package]
name = "hymeko_pgraph"
version = "0.1.0"
edition = "2024"
description = "P-graph framework: bipartite Material/Operating-Unit overlay on the canonical signed-incidence hypergraph IR. Axiom checker, MSG/SSG generation, ABB solver. Phase 0 — schema and types."
license = "MIT OR Apache-2.0"

[lib]
name = "hymeko_pgraph"

[dependencies]
hymeko_core  = { path = "../hymeko_core" }
parser       = { path = "../parser" }

thiserror    = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[dev-dependencies]
proptest     = "1"
criterion    = "0.8.2"

[[bench]]
name = "pgraph_bench"
harness = false

[[bin]]
name = "hymeko_pgraph_dump"
path = "src/bin/hymeko_pgraph_dump.rs"
