[package]
name = "hymeko_pgraph"
version = "0.1.0"
edition = "2024"
description = "P-graph framework: bipartite Material/Operating-Unit overlay on the canonical signed-incidence hypergraph IR. Axiom checker, MSG/SSG generation, ABB solver. Phase 0 — schema and types."
license = "MIT OR Apache-2.0"

[lib]
name = "hymeko_pgraph"

[dependencies]
hymeko_core  = { path = "../hymeko_core" }
parser       = { path = "../parser" }

thiserror    = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
# Stage P-io (2026-05-19): direct .pgip (P-graph Studio SQLite)
# read/write so users can roundtrip with P-graph Studio.
# `bundled` avoids a system SQLite dependency, but compiles C — so it is
# gated behind the default `pgip` feature and dropped on wasm32 targets
# (which have no C toolchain). Disable with `--no-default-features`.
rusqlite     = { version = "0.32", features = ["bundled"], optional = true }

[features]
default = ["pgip"]
# `.pgip` (P-graph Studio SQLite) read/write support. Pulls `rusqlite`.
pgip = ["dep:rusqlite"]

[dev-dependencies]
proptest     = "1"
criterion    = "0.8.2"

[[bench]]
name = "pgraph_bench"
harness = false

# Both binaries use `.pgip` I/O, so they require the `pgip` feature (on by
# default). A `--no-default-features` build (e.g. the wasm dependency path)
# skips them and the rusqlite/C compile entirely.
[[bin]]
name = "hymeko_pgraph_dump"
path = "src/bin/hymeko_pgraph_dump.rs"
required-features = ["pgip"]

[[bin]]
name = "pgraph"
path = "src/bin/pgraph.rs"
required-features = ["pgip"]
