[package]
name = "hymeko_py"
version = "0.1.0"
edition = "2024"
[lib]
name = "hymeko"
crate-type = ["cdylib"]
[dependencies]
hymeko_core = { path = "../hymeko_core", features = ["ipc", "arrow-schema"] }

ciborium = {  workspace = true }
arrow = { workspace = true, features = ["pyarrow", "ffi"] }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
iceoryx2 = { workspace = true }