[package]
name = "hymeko_py"
version = "0.1.0"
edition = "2024"
[lib]
name = "hymeko_py"
crate-type = ["cdylib"]
[dependencies]
hymeko_core = { path = "../hymeko_core", features = ["ipc", "arrow-schema"] }
hymeko_hre = { path = "../hymeko_hre", features = ["ipc"] }
hymeko_query = { path = "../hymeko_query" }
hymeko_formats = { path = "../hymeko_formats" }
hymeko_graph = { path = "../hymeko_graph" }
parser       = { path = "../parser" }

ciborium = {  workspace = true }
arrow = { workspace = true, features = ["pyarrow", "ffi"] }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
numpy = "0.28"
ndarray = "0.17"
iceoryx2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
rayon = { workspace = true }
dashmap = "6"