<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hymeko_ros2_demo</name>
  <version>0.1.0</version>
  <description>
    Live demonstration of the HyMeKo Multi-Contextual State Representation
    on a UR5e + MoveIt2 + Gazebo stack. Tier-1 scope: the grasping context
    from the MDPI Technologies article runs in real time against the
    robot's joint/wrench/gripper topics, publishing the aggregated outputs
    (stability margin, contact force, grasp success) at 10 Hz.
  </description>
  <maintainer email="csaba.hajdu@bme.hu">HyMeKo</maintainer>
  <license>MIT OR Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_simulation_gz</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
