[package]
name = "hymeko_wasm"
version = "0.1.0"
edition = "2024"
description = "wasm-bindgen exposure of the HyMeKo editor IR for the browser canvas"
license = "MIT OR Apache-2.0"

[lib]
name = "hymeko_wasm"
# cdylib for `wasm-pack build`; rlib for native `cargo test`.
crate-type = ["cdylib", "rlib"]

[dependencies]
hymeko_emitter = { path = "../hymeko_emitter" }
hymeko_core = { path = "../hymeko_core", default-features = false }
hymeko_query = { path = "../hymeko_query" }
hymeko_formats = { path = "../hymeko_formats" }
parser = { path = "../parser", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
ciborium = { workspace = true }
thiserror = "1"
slotmap = { version = "1", features = ["serde"] }

# wasm-bindgen infrastructure — only activates on wasm32 targets. The `.rs`
# module that uses it is gated behind `cfg(target_arch = "wasm32")`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dev-dependencies]
parser = { workspace = true }

[profile.release]
# wasm-opt-friendly — tiny + inlined.
opt-level = "z"
lto = true
