[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ehk_torch_stub"
version = "0.0.1"
description = "Minimal stub of ehk_torch — defines HypergraphConv, GGKSpec, build_incidence with placeholder math so HyMeKo-emitted nn.Module files run end-to-end. Do not use for real training."
requires-python = ">=3.11"
dependencies = ["torch>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/ehk_torch_stub"]
