[workspace]

[package]
name = "signedkan_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "signedkan_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
ahash = "0.8"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
